*** empty log message ***

--- a/www/perl.html
+++ b/www/perl.html
@@ -428,8 +428,8 @@ changed for any neighbor pixel that is not that color.</td>
  </tr>
   <tr>
  <td>Colorize</td>
-  <td>color=&gt;<i><a href="color.html">color name</a></i>, fill=&gt;<i><a href="color.html">
-color name</a></i></td>
+  <td>fill=&gt;<i><a href="color.html">color name</a></i>,
+	  opacity=&gt;<i>string</a></i></td>
   <td>colorize the image with the fill color</td>
  </tr>
   <tr>
