Refinement of affine.

--- a/www/Magick++/Drawable.html
+++ b/www/Magick++/Drawable.html
@@ -166,7 +166,8 @@ the Coordinate structure are shown in the following table:</font>
 </table>
 
 <p><font color="#000000">The Drawable classes are shown in the following
-table:</font>
+table. Only constructor signatures are documented here. Each Drawable class
+also provides methods by which each individual parameter may be adjusted.</font>
 <br>&nbsp;
 <table BORDER WIDTH="100%" NOSAVE >
 <caption><b>Drawable Classes</b></caption>
@@ -185,15 +186,32 @@ table:</font>
 </td>
 </tr>
 
-<tr>
-<td>
+<tr NOSAVE>
+<td ROWSPAN="2" NOSAVE>
 <center><a NAME="DrawableAffine"></a><font size=-1>DrawableAffine</font></center>
 </td>
 
 <td><font size=-1>double sx_, double sy_, double rx_, double ry_, double
 tx_, double ty_</font></td>
 
-<td><font size=-1>Set scaling, rotation, and translation (coordinate transformation).</font></td>
+<td><font size=-1>Specify a transformation matrix to adjust scaling, rotation,
+and translation (coordinate transformation) for subsequently drawn objects
+in the same or decendent drawing context.&nbsp; The sx_ &amp; sy_ parameters
+represent the x &amp; y scale factors, the rx_ &amp; ry_ parameters represent
+the x &amp; y rotation, and the tx_ &amp; ty_ parameters represent the
+x &amp; y translation.</font></td>
+</tr>
+
+<tr>
+<td><font size=-1>void</font></td>
+
+<td><font size=-1>Specify a transformation matrix to adjust scaling, rotation,
+and translation (coordinate transformation) for subsequently drawn objects
+in the same or decendent drawing context. Initialized to unity (no effect)
+affine values. Use class methods (not currently documented) to adjust individual
+parameters from their unity values.</font></td>
+
+<td></td>
 </tr>
 
 <tr>
