--- a/www/Magick++/Documentation.html
+++ b/www/Magick++/Documentation.html
@@ -20,7 +20,7 @@ available from the C API but in a simple object-oriented and well-documented
 framework.
 <p>Magick++ is intended to support commercial-grade application development.
 In order to avoid possible conflicts with the user's application, all symbols
-contained in Magick++ (included by the header <tt>&lt;Magick++.h></tt>)
+contained in Magick++ (included by the header <tt><font color="#663366">&lt;Magick++.h></font></tt>)
 are scoped to the namespace <i>Magick</i>. Symbols from the ImageMagick
 C library are imported under the <i>MagickLib</i> namespace to avoid possible
 conflicts and ImageMagick macros are only included within the Magick++
@@ -40,6 +40,8 @@ the Image class manages heap memory internally, images are best allocated
 via C++ automatic (stack-based) memory allocation. This support allows
 most programs using Magick++ to be written without using any pointers,
 simplifying the implementation and avoiding the risks of using pointers.
+When a program uses automatic memory allocation to allocate Magick++ images,
+that aspect of the program becomes naturally exception-safe and thread-safe.
 <p>The image class uses a number of supportive classes in order to specify
 arguments. Colors are specified via the <a href="Color.html">Color</a>
 class. Colors specified in X11-style string form are implicitly converted
@@ -131,7 +133,7 @@ image frames.</td>
 <tr>
 <td><a href="TypeMetric.html">TypeMetric</a></td>
 
-<td>Container for font type metrics (use with <a href="Image.html#fontTypeMetrics">Image::fontTypeMetrics</a>).&nbsp;&nbsp;</td>
+<td>Container for font type metrics (use with <a href="Image.html#fontTypeMetrics">Image::fontTypeMetrics</a>).&nbsp;</td>
 </tr>
 </table>
 
