Added Alagad MagickTag ColdFusion interface.

--- a/ImageMagick.html
+++ b/ImageMagick.html
@@ -269,6 +269,12 @@ kit  Interface to ImageMagick</a>
     <img src="images/ball.png" alt="*" height="14" width="14">
     <a href="http://www.simplesystems.org/ImageMagick/Integration/"> ImageMagick 
  Integration Project</a>
+            <br>
+    <img src="images/ball.png" alt="*" height="14" width="14">
+    <a href="http://www.alagad.com/index.cfm/name-products">
+Alagad Magick Tag for ColdFusion:</a> a free, open
+source, ColdFusion Custom Tag, which provides access to over 100 of the
+popular ImageMagick image manipulation functions.
     </blockquote>
     </blockquote>
                                                                         
