Prepared for release.

--- a/www/Magick++/NEWS.html
+++ b/www/Magick++/NEWS.html
@@ -10,6 +10,13 @@ Magick++ release number increments even if there are no changes associated
 with Magick++ itself.
 
 <p>
+(5.4.6)<BR>
+<UL>
+  <LI> Magick++ library no longer depends on C++ iostreams APIs.
+  <LI> Added DrawableTextUnderColor class to set text underbox color.
+
+</UL>
+<p>
 (5.4.5)<BR>
 <UL>
   <LI> Drawable classes have been re-written to use ImageMagick's draw.h
