*** empty log message ***

--- a/www/install.html
+++ b/www/install.html
@@ -660,7 +660,7 @@ to read and write the JPEG image format.</dd>
 <dd>
 Apply the <a href="ftp://ftp.imagemagick.org/pub/ImageMagick/delegates/ljpeg-6b.tar.gz">
 lossless</a> JPEG patch to <i>Independent JPEG Group's</i> source distribution
-to read lossless jpeg-encoded DICOM images:</dd>
+if you want to read lossless jpeg-encoded DICOM images:</dd>
 </dl>
 <dl>
 <table border="0" width="65%">
