*** empty log message ***

--- a/www/perl.html
+++ b/www/perl.html
@@ -957,6 +957,11 @@ next image in a sequence</td>
   <td>set the image filename</td>
  </tr>
   <tr>
+ <td>fill</td>
+  <td><i>color</i></td>
+  <td>The fill color paints any areas inside the outline of drawn shape.</td>
+ </tr>
+  <tr>
  <td>font</td>
   <td><i>string</i></td>
   <td>use this font when annotating the image with text</td>
@@ -1089,6 +1094,11 @@ OilPaint, CharcoalDrawing, JPEG}&nbsp;</td>
  <td>size</td>
   <td><i>string</i></td>
   <td>width and height of a raw image</td>
+ </tr>
+  <tr>
+ <td>stroke</td>
+  <td><i>color</i></td>
+  <td>The stroke color paints along the outline of a shape.</td>
  </tr>
   <tr>
  <td>tile</td>
