Mention that -format can cause input file to be not overwritten.

--- a/www/mogrify.html
+++ b/www/mogrify.html
@@ -101,7 +101,9 @@ color="#FFFFFF"><font size="+1">
 <p>
 <strong>Mogrify</strong> transforms an image or a sequence of images. These transforms
 include image scaling, image rotation, color reduction, and others. The
-transmogrified image overwrites the original image. 
+transmogrified image overwrites the original image, unless an option such as
+<strong>-format</strong> causes the output filename to be different from the input
+filename.
 <br>&nbsp;<br>
 The graphics formats supported by <strong>mogrify</strong> are listed in
 <a href="ImageMagick.html"><em>ImageMagick(1)</em></a>.
