fixed "magtick" typo.

--- a/www/conjure.html
+++ b/www/conjure.html
@@ -328,7 +328,7 @@ use. Currently only <em>width</em> and <em>height</em> are supported.</dd>
 </dd>
 <dt>&lt;set&gt;</dt>
 <dd>background, bordercolor, clip-mask, colorspace, density,
-magtick, mattecolor, opacity.  Set an attribute recognized by
+magick, mattecolor, opacity.  Set an attribute recognized by
 PerlMagick's GetAttribute().</dd>
 <dt>&lt;border&gt;</dt>
     <dd>fill, geometry, height, width</dd>
