Changed "matte (transparent)" to "matte (frame)"

--- a/www/Magick++/STL.html
+++ b/www/Magick++/STL.html
@@ -1711,7 +1711,7 @@ matte channel if&nbsp; the image has one otherwise create an opaque one.</font><
 
 <td><font size=-1>const <a href="Color.html">Color</a> &amp;matteColor_</font></td>
 
-<td><font size=-1>Image matte (transparent) color</font></td>
+<td><font size=-1>Image matte (frame) color</font></td>
 </tr>
 
 <tr>
