--- a/www/Magick++/NEWS.html
+++ b/www/Magick++/NEWS.html
@@ -4,11 +4,14 @@
 </HEAD>
 <BODY TEXT="#000000" BGCOLOR="#FFFFFF" LINK="#0000EE" VLINK="#551A8B" ALINK="#FF0000">
 <p>
-This file records noteworthy changes in Magick++.  As of Magick++ 5.2.3,
-Magick++ release numbering tracks ImageMagick release numbering so the
-Magick++ release number increments even if there are no changes associated
-with Magick++ itself.
+This file records noteworthy changes in Magick++.
 
+<p>
+(5.4.7)<BR>
+<UL>
+  <LI> Nothing yet.
+
+</UL>
 <p>
 (5.4.6)<BR>
 <UL>
