Dr. Hallo -> Dr. Halo

--- a/www/ImageMagick.html
+++ b/www/ImageMagick.html
@@ -188,7 +188,7 @@ The <strong>ImageMagick</strong> utilities recognize the following image formats
 <tr><td><img SRC="../images/ball.png" ALT="*">CMYKA    </td><td>*rw-</td><td>Raw cyan, magenta, yellow, black, and</td></tr>
 <tr><td>          </td><td>    </td><td>matte samples (8 or 16 bits, depending</td></tr>
 <tr><td>          </td><td>    </td><td>on the image depth)</td></tr>
-<tr><td><img SRC="../images/ball.png" ALT="*">CUT      </td><td>*r--</td><td>DR Hallo</td></tr>
+<tr><td><img SRC="../images/ball.png" ALT="*">CUT      </td><td>*r--</td><td>DR Halo</td></tr>
 <tr><td><img SRC="../images/ball.png" ALT="*">DCM      </td><td>*r--</td><td>Digital Imaging and Communications in</td></tr>
 <tr><td>          </td><td>    </td><td> Medicine image</td></tr>
 <tr><td><img SRC="../images/ball.png" ALT="*">DCX      </td><td>*rw+</td><td>ZSoft IBM PC multi-page Paintbrush</td></tr>
@@ -2343,7 +2343,7 @@ width=15><b><font face="Helvetica, Arial"
 ><font color="#FFFFFF"><font size="+1">
     <a name="-mattecolor">-mattecolor</a> <i>&lt;color&gt;</i>
 </font></font></font></b></td></tr></table>
-<table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>specify the matte color</td></tr></table>
+<table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>specify the color to be used with the <strong>-frame</strong> option</td></tr></table>
 <table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
 The color is specified using the format described in the "Color Names"
 section of <em>X(1)</em>.</font></td></tr></table>
