--- a/ImageMagick.html
+++ b/ImageMagick.html
@@ -21,8 +21,7 @@ to an image and save your completed work in the same or differing image
 format. Image processing operations are available from the command line,
 as well as through C, C++, Perl, or Java programming interfaces.</blockquote>
 
-<dd>
-<a href="www/archives.html"><img SRC="images/magick.png" ALT="Image Magick" BORDER=0 height=236 width=229 align=RIGHT></a></dd>
+<a href="www/archives.html"><img SRC="images/magick.png" ALT="Image Magick" BORDER=0 height=236 width=229 align=RIGHT></a>
 
 <blockquote>Here are just a few <a href="images/examples.jpg">examples</a>
 of what ImageMagick can do:</blockquote>
@@ -46,8 +45,7 @@ or text on an image
 image with a border or frame
 <br><img SRC="images/ball.png" ALT="*" height=14 width=14> Describe the
 format and characteristics of an image</dl>
-Click on the <b>Wizard</b> to immediately go to the download area.
-<dl>&nbsp;</dl>
+<p>Click on the <b>Wizard</b> to immediately go to the download area.</p>
 You can access ImageMagick functions directly from the command line using
 the ImageMagick tools <a href="www/convert.html">convert</a> , <a href="www/mogrify.html">mogrify</a>
 , <a href="www/montage.html">montage</a> , <a href="www/composite.html">composite</a>
@@ -145,11 +143,9 @@ interfaces (APIs):</dt>
 <dl><img SRC="images/ball.png" ALT="*" height=14 width=14> <a href="www/api.html">C
 Language</a>: the core programming interface to ImageMagick
 <br><img SRC="images/ball.png" ALT="*" height=14 width=14> <a href="www/perl.html">Perl
-Language</a>: PerlMagick provides an object-oriented Perl interface to
-ImageMagick
+Language</a>: an object-oriented Perl interface to ImageMagick
 <br><img SRC="images/ball.png" ALT="*" height=14 width=14> <a href="http://www.procoders.net/imagemagick/">Python
-Language</a>: ImageMagick for Python provides an object-oriented Python
-interface to ImageMagick
+Language</a>: an object-oriented Python interface to ImageMagick
 <br><img SRC="images/ball.png" ALT="*" height=14 width=14> <a href="www/Magick++/index.html">C++
 Language</a>: Magick++&nbsp; provides an object-oriented C++ interface
 to ImageMagick
@@ -169,12 +165,13 @@ to provide adaptation interfaces for other environments:</dt>
 </blockquote>
 
 <blockquote>
-<blockquote><img SRC="images/ball.png" ALT="*" height=14 width=14><a href="http://www.simplesystems.org/ImageMagick/Integration/">ImageMagick
+<blockquote>
+<img SRC="images/ball.png" ALT="*" height=14 width=14><a href="http://www.simplesystems.org/ImageMagick/Integration/">ImageMagick
 Integration Project</a>
-<br><img SRC="images/ball.png" ALT="*" height=14 width=14> <a href="http://www.alagad.com/index.cfm/name-products">Alagad
-Magick Tag for ColdFusion:</a> a free, open source, ColdFusion Custom Tag,
-which provides access to over 100 of the popular ImageMagick image manipulation
-functions.</blockquote>
+<br>
+<img SRC="images/ball.png" ALT="*" height=14 width=14> <a href="http://www.alagad.com/index.cfm/name-products">Alagad
+Magick Tag for ColdFusion:</a> a free, open source, ColdFusion Custom Tag
+</blockquote>
 </blockquote>
 
 <blockquote>
