Link to PtcMagick

--- a/ImageMagick.html
+++ b/ImageMagick.html
@@ -20,9 +20,7 @@ You can also resize, rotate, sharpen, color reduce, or add special effects
 to an image and save your completed work in the same or differing image
 format. Image processing operations are available from the command line,
 as well as through C, C++, Perl, or Java programming interfaces.</blockquote>
-
 <a href="www/archives.html"><img SRC="images/magick.png" ALT="Image Magick" BORDER=0 height=236 width=229 align=RIGHT></a>
-
 <blockquote>Here are just a few <a href="images/examples.jpg">examples</a>
 of what ImageMagick can do:</blockquote>
 
@@ -45,9 +43,9 @@ or text on an image
 image with a border or frame
 <br><img SRC="images/ball.png" ALT="*" height=14 width=14> Describe the
 format and characteristics of an image</dl>
-<p>Click on the <b>Wizard</b> to immediately go to the download area.</p>
-You can access ImageMagick functions directly from the command line using
-the ImageMagick tools <a href="www/convert.html">convert</a> , <a href="www/mogrify.html">mogrify</a>
+Click on the <b>Wizard</b> to immediately go to the download area.
+<br>You can access ImageMagick functions directly from the command line
+using the ImageMagick tools <a href="www/convert.html">convert</a> , <a href="www/mogrify.html">mogrify</a>
 , <a href="www/montage.html">montage</a> , <a href="www/composite.html">composite</a>
 , or <a href="www/identify.html">identify</a> . Use the <a href="www/display.html">display</a>
 program to interactively manipulate your images or <a href="www/animate.html">animate</a>
@@ -165,13 +163,10 @@ to provide adaptation interfaces for other environments:</dt>
 </blockquote>
 
 <blockquote>
-<blockquote>
-<img SRC="images/ball.png" ALT="*" height=14 width=14><a href="http://www.simplesystems.org/ImageMagick/Integration/">ImageMagick
-Integration Project</a>
-<br>
-<img SRC="images/ball.png" ALT="*" height=14 width=14> <a href="http://www.alagad.com/index.cfm/name-products">Alagad
-Magick Tag for ColdFusion:</a> a free, open source, ColdFusion Custom Tag
-</blockquote>
+<blockquote><img SRC="images/ball.png" ALT="*" height=14 width=14> <a href="http://www.simplesystems.org/PtcMagick/">PtcMagick</a>:
+an interface between ImageMagick and OpenPTC
+<br><img SRC="images/ball.png" ALT="*" height=14 width=14> <a href="http://www.alagad.com/index.cfm/name-products">Alagad
+Magick Tag for ColdFusion:</a> a free, open source, ColdFusion Custom Tag</blockquote>
 </blockquote>
 
 <blockquote>
