--- a/www/Changelog.html
+++ b/www/Changelog.html
@@ -23,13 +23,19 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2002-06-18  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
+  * Added PerlMagick threading support (patch by Doug MacEachern).
+
+2002-06-16  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+  * CLIPBOARD and EMF modules compile under MinGW and Cygwin.
+
 2002-06-14  Glenn Randers-Pehrson &lt;randeg@alum.rpi.edu&gt;
   * The wbmp writer would dump core if it received a DirectClass image
     that contained only black and white pixels, because no colormap exists.
 
 2002-06-09  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
-	* Label color could not be set (bug report by Ron Savage).
-	* Added CatchException() method to magick/error.c.
+  * Label color could not be set (bug report by Ron Savage).
+  * Added CatchException() method to magick/error.c.
 
 2002-06-06  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
   * ImageMagick, version 5.4.6-1 released.
