Change PythonMagick URL

--- a/ImageMagick.html
+++ b/ImageMagick.html
@@ -142,7 +142,7 @@ interfaces (APIs):</dt>
 Language</a>: the core programming interface to ImageMagick
 <br><img SRC="images/ball.png" ALT="*" height=14 width=14> <a href="www/perl.html">Perl
 Language</a>: an object-oriented Perl interface to ImageMagick
-<br><img SRC="images/ball.png" ALT="*" height=14 width=14> <a href="http://www.procoders.net/imagemagick/">Python
+<br><img SRC="images/ball.png" ALT="*" height=14 width=14> <a href="http://pythonmagick.procoders.net/">Python
 Language</a>: an object-oriented Python interface to ImageMagick
 <br><img SRC="images/ball.png" ALT="*" height=14 width=14> <a href="www/Magick++/index.html">C++
 Language</a>: Magick++&nbsp; provides an object-oriented C++ interface
