--- a/www/archives.html
+++ b/www/archives.html
@@ -10,7 +10,7 @@
 </head>
 <body text="#000000" bgcolor="#FFFFFF" link="#0085C0" vlink="#800080" alink="#0085C0">
 
-<center><img SRC="../images/magick_small.png" ALT="" height="118" width="114"></center>
+<center><img SRC="../images/magick_small.png" ALT="" height=118 width=114></center>
 
 <p>The source distribution of <b>ImageMagick</b> as well as pre-compiled
 binaries are available at any of the sites listed here (unless otherwise
@@ -53,7 +53,7 @@ Users Group)</td>
 </tr>
 
 <tr>
-<td><a href="http://imagemagick.sourceforge.net/">imagemagick.sourceforge.net</a></td>
+<td><a href="http://imagemagick.sourceforge.net/">http://imagemagick.sourceforge.net</a></td>
 
 <td>1000</td>
 
@@ -193,13 +193,27 @@ Users Group)</td>
 </tr>
 
 <tr>
+<td><a href="ftp://ftp.rge.com/pub/multimedia/imagemagick/">ftp://ftp.rge.com</a>&nbsp;
+<a href="http://www.rge.com/pub/multimedia/imagemagick/">http://www.rge.com</a></td>
+
+<td>?</td>
+
+<td>Rochester, NY</td>
+
+<td></td>
+</tr>
+
+<tr>
 <td><a href="ftp://ftp.simplesystems.org/pub/ImageMagick/">ftp.simplesystems.org</a></td>
 
 <td>5</td>
 
 <td>Dallas, Texas USA</td>
 
-<td>Daily mirror</td>
+<td>Daily mirror.&nbsp; This is a good site to mirror from.&nbsp; If you
+provide a public mirror of ImageMagick (and can provide a verifiable URL),
+please send an email to bfriesen@simple.dallas.tx.us for your mirror to
+be given assured access.</td>
 </tr>
 
 <tr>
