Added crossreference to -quality and -sampling_factor under -compression option.

--- a/www/ImageMagick.html
+++ b/www/ImageMagick.html
@@ -1035,6 +1035,11 @@ may result in larger-than-expected GIF files.</font></td></tr></table>
 <table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
 <em>"Lossless"</em> refers to lossless JPEG, which is only available if
 the JPEG library has been patched to support it.</font></td></tr></table>
+<table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
+Use the <strong>-quality</strong> option to set the compression level to be used by
+JPEG, PNG, MIFF, and MPEG encoders.  Use the <strong>-sampling_factor</strong>
+option to set the sampling factor to be used by JPEG, MPEG, and YUV encoders
+for downsampling the chroma channels.</font></td></tr></table>
 <table BORDER=0 WIDTH="94%">
 <tr>
 <td width="3%"><br></td> 
