--- a/www/Changelog.html
+++ b/www/Changelog.html
@@ -23,6 +23,15 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2002-06-20  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+  * Update to use Automake 1.6.2
+
+2002-06-20  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+  * Try harder when searching for Ghostscript fonts under Linux.
+
+2002-06-19  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+  * Identify PICT files via magic.mgk.
+
 2002-06-18  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
   * Added PerlMagick threading support (patch by Doug MacEachern).
 
@@ -96,7 +105,7 @@ ImageMagick Changes</font></font></font></b></td>
   * DCM patch provided by Shane Blackett.
 
 2002-05-07  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
-  * Lock mutex when destorying a SemaphoreInfo structure (patch provided
+  * Lock mutex when destroying a SemaphoreInfo structure (patch provided
     by William Radcliffe).
   * Added mingw patches provided by Derry Bryson.
 
