*** empty log message ***

--- a/ImageMagick.html
+++ b/ImageMagick.html
@@ -46,7 +46,7 @@ format and characteristics of an image</dl>
 <p>
 Click on the <b>Wizard</b> to immediately go to the download area.
 <p>
-<br>You can access ImageMagick functions directly from the command line
+You can access ImageMagick functions directly from the command line
 using the ImageMagick tools <a href="www/convert.html">convert</a> , <a href="www/mogrify.html">mogrify</a>
 , <a href="www/montage.html">montage</a> , <a href="www/composite.html">composite</a>
 , or <a href="www/identify.html">identify</a> . Use the <a href="www/display.html">display</a>
