--- a/www/sponsor.html
+++ b/www/sponsor.html
@@ -47,7 +47,7 @@ possibilities:
 Provide assistance with legal matters related to ImageMagick Studio.</li>
 
 <li>
-Support a high-bandwidth server to serve as the main distribution
+Support a high-bandwidth server to use as the main distribution
 point for ImageMagick.</li>
 
 <li>
