--- a/www/Magick++/NEWS.html
+++ b/www/Magick++/NEWS.html
@@ -9,7 +9,7 @@ This file records noteworthy changes in Magick++.
 <p>
 (5.4.7)<BR>
 <UL>
-  <LI> Nothing yet.
+  <LI> No changes to report.
 
 </UL>
 <p>
