*** empty log message ***

--- a/www/cd.html
+++ b/www/cd.html
@@ -30,7 +30,7 @@ to cover the cost of postage (be sure to include the self-addressed envelope).
 for a one week turnaround although it may be less.
 <p>All proceeds from the CD will be donated to the <a href="http://www.specialolympics.com/">Special
 Olympics</a>.
-<p>Thanks goes to anonymous company for volunteering to burn these CD's.
+<p>Thanks goes to the SAS Institute Inc. for volunteering to burn these CD's.
 <p>Note, I have 50 ImageMagick CD's left. When they are gone I cannot guarentee
 that more will be produced.
 <p>
