*** empty log message ***

--- a/www/perl.html
+++ b/www/perl.html
@@ -1559,7 +1559,7 @@ entry point for the image manipulation methods (<a href="#mani">Manipulate
 an Image</a>). The parameters are the name of a method followed by any parameters
 the method may require. For example, these calls are equivalent: <pre>&nbsp;&nbsp;&nbsp; $image-&gt;Crop('340x256+0+0');<br>&nbsp;&nbsp;&nbsp; $image-&gt;Mogrify('crop', '340x256+0+0');</pre>
  Method MogrifyRegion() applies a transform to a region of the image. It
-is similiar to Mogrify() but begins with the region geometry. For example,
+is similar to Mogrify() but begins with the region geometry. For example,
 suppose you want to brighten a 100x100 region of your image at location (40,
 50): <pre>&nbsp;&nbsp;&nbsp; $image-&gt;MogrifyRegion('100x100+40+50', 'modulate', brightness=&gt;50);</pre>
   </p>
@@ -1706,7 +1706,7 @@ Below is a list of error and warning codes:
   <tr>
  <td>305</td>
   <td>TypeWarning</td>
-  <td>A font is unavailable; a substitution may have occured</td>
+  <td>A font is unavailable; a substitution may have occurred</td>
  </tr>
   <tr>
  <td>310</td>
@@ -1771,7 +1771,7 @@ Delegate</i> is missing</td>
   <tr>
  <td>405</td>
   <td>TypeError</td>
-  <td>A font is unavailable; a substitution may have occured</td>
+  <td>A font is unavailable; a substitution may have occurred</td>
  </tr>
   <tr>
  <td>410</td>
